--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,16 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
-    "license": "MIT",
+    "name": "andegna/vas",
+    "description": "Value Added Service | Andegna Systems",
+    "keywords": ["smpp", "laravel", "kannel", "vuejs"],
+    "license": "proprietary",
     "type": "project",
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.6.*",
+        "laravel/horizon": "^1.3",
+        "predis/predis": "~1.0",
         "laravel/tinker": "^1.0"
     },
     "require-dev": {
