--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,9 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.6.*",
         "laravel/horizon": "^1.3",
-        "predis/predis": "~1.0",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "league/csv": "^9.1",
+        "predis/predis": "~1.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.4",
