--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "private": true,
+
     "scripts": {
         "dev": "npm run development",
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
@@ -9,9 +10,11 @@
         "prod": "npm run production",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
+
     "devDependencies": {
         "axios": "^0.18",
         "bootstrap": "^4.0.0",
+        "chart.js": "^2.7.2",
         "popper.js": "^1.12",
         "cross-env": "^5.1",
         "jquery": "^3.2",
