--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=" | Value Added Service"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -37,3 +37,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+MT=8123
+MO=8213
+
+KANNEL_USER=app
+KANNEL_PASSWORD=sendsms-password
