--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "andegna/calender": "^2.1",
+        "barryvdh/laravel-dompdf": "^0.8.3",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.6.*",
