--- a/.env.example
+++ b/.env.example
@@ -1,45 +1,31 @@
 APP_NAME=" | Value Added Service"
 APP_ENV=local
-APP_KEY=
+APP_KEY="Insert app key here or run php artisan k:g"
 APP_DEBUG=true
-APP_URL=http://localhost
-
-LOG_CHANNEL=stack
+APP_URL=http://localhost:8000
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE="Insert DB name here"
+DB_USERNAME="Insert DB user here"
+DB_PASSWORD="Insert DB Password here"
 
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-SESSION_DRIVER=file
-SESSION_LIFETIME=120
-QUEUE_DRIVER=sync
+CACHE_DRIVER=redis
+SESSION_DRIVER=redis
+QUEUE_DRIVER=redis
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MT="Insert MT number here"
+MO="Insert MO number here"
+MO_PRICE="Insert MO/MT price here eg. 1.00"
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
+KANNEL_HOST=localhost
+KANNEL_USER=admin
+KANNEL_PASSWORD=secret
 
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
-MT=8123
-MO=8213
-
-KANNEL_USER=app
-KANNEL_PASSWORD=sendsms-password
+CENT_URL=http://stage.centili.com/conn/cecbg/v1/mosms
+CENT_URL_not_using_this=https://api.centili.com/conn/cecbg/v1/mosms
