--- a/docker/sms/kannel.conf
+++ b/docker/sms/kannel.conf
@@ -54,7 +54,7 @@ smsc  = smpp
 smsc-id = smsc
 preferred-smsc-id = smsc
 allowed-smsc-id = smsc
-host = 172.22.10.201
+host = localhost
 port = 2775
 transceiver-mode = yes
 smsc-username = smppclient1
@@ -70,7 +70,7 @@ log-level = 0
 # SMS centers by bearerbox, or before they are given to bearerbox for delivery
 
 group = smsbox
-bearerbox-host = 127.0.0.1
+bearerbox-host = localhost
 sendsms-port = 13013
 sendsms-chars = "0123456789 +-"
 log-file = "/var/log/kannel/smsbox.log"
@@ -128,4 +128,4 @@ accepted-smsc = smsc
 send-sender = yes
 accept-x-kannel-headers=true
 concatenation=true
-post-url = http://application/api/kannel/received?from=%p&to=%P&timestamp=%t&content=%a&coding=%c&charSet=%C&udh=%u&messageId=%I"
+post-url = http://localhost:8000/api/kannel/received?from=%p&to=%P&timestamp=%t&content=%a&coding=%c&charSet=%C&udh=%u&messageId=%I"
