--- a/docker/sms/kannel.conf
+++ b/docker/sms/kannel.conf
@@ -27,7 +27,7 @@ status-password = secret
 #admin-allow-ip = "127.0.0.1"
 #box-deny-ip = "*.*.*.*"
 #box-allow-ip = "127.0.0.1"
-log-file = "/var/log/kannel/bearerbox.log"
+log-file = "storage/kannel/bearerbox.log"
 log-level = 0
 store-type=spool
 store-location=/var/spool/kannel
@@ -73,9 +73,10 @@ group = smsbox
 bearerbox-host = localhost
 sendsms-port = 13013
 sendsms-chars = "0123456789 +-"
-log-file = "/var/log/kannel/smsbox.log"
+# log-file = "/var/log/kannel/smsbox.log"
+log-file = "storage/kannel/smsbox.log"
 log-level = 0
-access-log = "/var/log/kannel/smsbox-access.log"
+access-log = "storage/kannel/smsbox-access.log"
 reply-couldnotfetch = "Your message could not be processed at this time.  Please try again later. (err=couldnotfetch)"
 reply-requestfailed = "Your message could not be processed at this time.  Please try again later. (err=requestfailed)"
 reply-couldnotrepresent = "Your message could not be processed at this time.  Please try again later. (err=couldnotrepresent)"
@@ -100,6 +101,7 @@ password = secret
 #user-allow-ip = "127.0.0.1"
 concatenation = true
 default-smsc = smsc
+max-messages = 4
 
 #---------------------------------------------
 # SERVICES
@@ -126,6 +128,7 @@ keyword = default
 catch-all = yes
 accepted-smsc = smsc
 send-sender = yes
-accept-x-kannel-headers=true
-concatenation=true
+accept-x-kannel-headers = true
+concatenation = true
+max-messages = 4
 post-url = http://localhost:8000/api/kannel/received?from=%p&to=%P&timestamp=%t&content=%a&coding=%c&charSet=%C&udh=%u&messageId=%I"
