--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,5 @@ KANNEL_PASSWORD=secret
 
 CENT_URL=http://stage.centili.com/conn/cecbg/v1/mosms
 CENT_URL_not_using_this=https://api.centili.com/conn/cecbg/v1/mosms
+
+# UNIQUE_SERVICE=true
