More support for non VAS systems

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=" | Value Added Service"
+APP_NAME=" | xLab"
 APP_ENV=local
 APP_KEY="Insert app key here or run php artisan k:g"
 APP_DEBUG=true
@@ -31,3 +31,4 @@ CENT_URL=http://stage.centili.com/conn/cecbg/v1/mosms
 CENT_URL_not_using_this=https://api.centili.com/conn/cecbg/v1/mosms
 
 # UNIQUE_SERVICE=true
+# NON_VAS=true
