--- a/docker/sms/kannel.conf
+++ b/docker/sms/kannel.conf
@@ -27,7 +27,7 @@ status-password = secret
 #admin-allow-ip = "127.0.0.1"
 #box-deny-ip = "*.*.*.*"
 #box-allow-ip = "127.0.0.1"
-log-file = "storage/kannel/bearerbox.log"
+log-file = "/var/log/kannel/bearerbox.log"
 log-level = 0
 store-type=spool
 store-location=/var/spool/kannel
@@ -57,11 +57,13 @@ allowed-smsc-id = smsc
 host = 10.190.10.16
 port = 8313
 transceiver-mode = yes
-smsc-username = smppclient1
-smsc-password = password
 system-type = ""
 log-file = "/var/log/kannel/smsc.log"
 log-level = 0
+host = sms.1gna.com
+port = 2775
+smsc-username = smppclient1
+smsc-password = password
 
 #---------------------------------------------
 # SMSBOX SETUP
@@ -74,9 +76,9 @@ bearerbox-host = localhost
 sendsms-port = 13013
 sendsms-chars = "0123456789 +-"
 # log-file = "/var/log/kannel/smsbox.log"
-log-file = "storage/kannel/smsbox.log"
+log-file = "/var/log/kannel/smsbox.log"
 log-level = 0
-access-log = "storage/kannel/smsbox-access.log"
+access-log = "/var/log/kannel/smsbox-access.log"
 reply-couldnotfetch = "Your message could not be processed at this time.  Please try again later. (err=couldnotfetch)"
 reply-requestfailed = "Your message could not be processed at this time.  Please try again later. (err=requestfailed)"
 reply-couldnotrepresent = "Your message could not be processed at this time.  Please try again later. (err=couldnotrepresent)"
@@ -103,6 +105,14 @@ concatenation = true
 default-smsc = smsc
 max-messages = 4
 
+
+
+
+
+
+
+
+
 #---------------------------------------------
 # SERVICES
 #
@@ -113,9 +123,10 @@ max-messages = 4
 # The 'ping-kannel' service let's you check to see if Kannel is running,
 # even if RapidSMS is offline for some reason.
 
+# https://www.kannel.org/download/1.4.3/userguide-1.4.3/userguide.html#AEN3322
 group = sms-service
-keyword = ping-kannel
-text = "Kannel is online and responding to messages."
+keyword = xlab
+text = "The system is online and responding to messages.\n\n Developed By XLAB Digital Solution PLC"
 
 # There should be always a 'default' service. This service is used when no
 # other 'sms-service' is applied.  These relay incoming messages from any
@@ -131,4 +142,7 @@ send-sender = yes
 accept-x-kannel-headers = true
 concatenation = true
 max-messages = 4
-post-url = http://localhost:8000/api/kannel/received?from=%p&to=%P&timestamp=%t&content=%a&coding=%c&charSet=%C&udh=%u&messageId=%I"
+omit-empty = yes
+assume-plain-text = yes
+# footer = "\n\nxlab digital"
+post-url = http://application/api/kannel/received?from=%p&to=%P&timestamp=%t&content=%a&coding=%c&charSet=%C&udh=%u&messageId=%I"
