--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
-APP_NAME=" | xLab"
+APP_NAME=" | xLab Digital Solution PLC"
 APP_ENV=local
 APP_KEY="Insert app key here or run php artisan k:g"
 APP_DEBUG=true
-APP_URL=http://localhost:8000
+APP_URL=http://application:80
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=database
 DB_PORT=3306
 DB_DATABASE="Insert DB name here"
 DB_USERNAME="Insert DB user here"
@@ -15,7 +15,7 @@ CACHE_DRIVER=redis
 SESSION_DRIVER=redis
 QUEUE_DRIVER=redis
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=cache
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -25,12 +25,13 @@ MO_PRICE="Insert MO/MT price here eg. 1.00"
 
 COMMAND_CHAR="#"
 
-KANNEL_HOST=localhost
+KANNEL_HOST=smsc
 KANNEL_USER=admin
 KANNEL_PASSWORD=secret
 
-CENT_URL=http://stage.centili.com/conn/cecbg/v1/mosms
-CENT_URL_not_using_this=https://api.centili.com/conn/cecbg/v1/mosms
+#CENT_URL=http://stage.centili.com/conn/cecbg/v1/mosms
+#CENT_URL=https://api.centili.com/conn/cecbg/v1/mosms
 
 # UNIQUE_SERVICE=true
 # NON_VAS=true
+# DEAD=1546722000
