--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,13 @@ services:
      - .:/var/www/html
     ports:
      - 8000:80
+    restart: always
     working_dir: /var/www/html
   cache:
     image: redis:alpine
     networks:
      - appnet
+    restart: always
     volumes:
      - cachedata:/data
   database:
@@ -27,12 +29,14 @@ services:
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
     networks:
      - appnet
+    restart: always
     volumes:
      - dbdata:/var/lib/mysql
   smsc:
     image: bulktrade/kannel:r5173
     networks:
       - appnet
+    restart: always
     volumes:
       - "./docker/sms/kannel.conf:/etc/kannel/kannel.conf"
       - "./docker/sms/supervisord.conf:/etc/supervisor/conf.d/supervisord.conf"
