--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
-APP_NAME=" | xLab Digital Solution PLC"
+APP_NAME="Example | xLab Digital Solution PLC"
 APP_ENV=local
-APP_KEY="Insert app key here or run php artisan k:g"
+APP_KEY="php artisan k:g"
 APP_DEBUG=true
 APP_URL=http://application:80
 
 DB_CONNECTION=mysql
 DB_HOST=database
 DB_PORT=3306
-DB_DATABASE="Insert DB name here"
-DB_USERNAME="Insert DB user here"
-DB_PASSWORD="Insert DB Password here"
+DB_DATABASE="database name"
+DB_USERNAME="database user"
+DB_PASSWORD="database password"
 
 CACHE_DRIVER=redis
 SESSION_DRIVER=redis
@@ -19,9 +19,9 @@ REDIS_HOST=cache
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MT="Insert MT number here"
-MO="Insert MO number here"
-MO_PRICE="Insert MO/MT price here eg. 1.00"
+MT="MT number"
+MO="MO number"
+MO_PRICE="1"
 
 COMMAND_CHAR="#"
 
@@ -29,8 +29,8 @@ KANNEL_HOST=smsc
 KANNEL_USER=admin
 KANNEL_PASSWORD=secret
 
-#CENT_URL=http://stage.centili.com/conn/cecbg/v1/mosms
-#CENT_URL=https://api.centili.com/conn/cecbg/v1/mosms
+# CENT_URL=http://stage.centili.com/conn/cecbg/v1/mosms
+# CENT_URL=https://api.centili.com/conn/cecbg/v1/mosms
 
 # UNIQUE_SERVICE=true
 # NON_VAS=true
