--- a/docker/sms/supervisord.conf
+++ b/docker/sms/supervisord.conf
@@ -9,7 +9,7 @@ stdout_logfile_maxbytes=0
 priority=1
 
 [program:smsbox]
-command=/usr/local/kannel/sbin/smsbox -v 0 /etc/kannel/kannel.conf
+command=bash -c "sleep 10 && exec /usr/local/kannel/sbin/smsbox -v 0 /etc/kannel/kannel.conf"
 redirect_stderr=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
