make command character customizable

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,8 @@ MT="Insert MT number here"
 MO="Insert MO number here"
 MO_PRICE="Insert MO/MT price here eg. 1.00"
 
+COMMAND_CHAR="#"
+
 KANNEL_HOST=localhost
 KANNEL_USER=admin
 KANNEL_PASSWORD=secret
