Default port for tele smsc

--- a/docker/sms/kannel.conf
+++ b/docker/sms/kannel.conf
@@ -54,8 +54,8 @@ smsc  = smpp
 smsc-id = smsc
 preferred-smsc-id = smsc
 allowed-smsc-id = smsc
-host = localhost
-port = 2775
+host = 10.190.10.16
+port = 8313
 transceiver-mode = yes
 smsc-username = smppclient1
 smsc-password = password
