--- a/docker/laravel/supervisord.conf
+++ b/docker/laravel/supervisord.conf
@@ -3,14 +3,26 @@ nodaemon=true
 
 [program:nginx]
 command=nginx
-stdout_logfile=/dev/stdout
+autostart=true
+autorestart=true
+redirect_stderr=true
 stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
+stdout_logfile=/dev/stdout
 
 [program:php-fpm]
 command=php-fpm7.2
-stdout_logfile=/dev/stdout
+autostart=true
+autorestart=true
+redirect_stderr=true
 stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
+stdout_logfile=/dev/stdout
+
+[program:laravel-worker]
+process_name=%(program_name)s_%(process_num)02d
+command=php artisan queue:work --sleep=3 --tries=3
+autostart=true
+autorestart=true
+numprocs=8
+redirect_stderr=true
+stdout_logfile_maxbytes=0
+stdout_logfile=/dev/stdout
