--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME="Example | xLab Digital Solution PLC"
+APP_NAME="Example VAS"
 APP_ENV=local
-APP_KEY="php artisan k:g"
+APP_KEY=""
 APP_DEBUG=true
 APP_URL=http://application:80
 
