--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "predis/predis": "~1.0"
     },
     "require-dev": {
+        "bamarni/composer-bin-plugin": "^1.3",
         "barryvdh/laravel-ide-helper": "^2.4",
         "doctrine/dbal": "^2.8",
         "filp/whoops": "^2.0",
