--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,9 @@ APP_URL=http://application:80
 DB_CONNECTION=mysql
 DB_HOST=database
 DB_PORT=3306
-DB_DATABASE="database name"
-DB_USERNAME="database user"
-DB_PASSWORD="database password"
+DB_DATABASE="vas"
+DB_USERNAME="root"
+DB_PASSWORD=""
 
 CACHE_DRIVER=redis
 SESSION_DRIVER=redis
